--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 # production
 /build
 /src/firebase
+/Users/ThaylieNguyen 1/Desktop/UDem/Complete React 2021 - Yihua/ecom-clothing/src/firebase
 
 
 # misc
